--- a/weod/WebContent/static/index.html
+++ b/weod/WebContent/static/index.html
@@ -61,6 +61,11 @@
                 <img class="icon" src="./img/icon/demo.png"/>
                 <div class="title">壁纸</div>
             </div>
+            <div class="shortcut"
+                 onclick="Win10.openUrl('http://w.qq.com/','<img class=\'icon\' src=\'./img/icon/qq.png\'/>QQ')">
+                <img class="icon" src="./img/icon/qq.png"/>
+                <div class="title">QQ</div>
+            </div>
         </div>
     </div>
     <div id="win10-menu" class="hidden">
