--- a/weod/WebContent/static/index.html
+++ b/weod/WebContent/static/index.html
@@ -47,9 +47,9 @@
     <div class="desktop">
         <div id="win10-shortcuts" class="shortcuts-hidden">
             <div class="shortcut"
-                 onclick="Win10.openUrl('http://baidu.com','<img class=\'icon\' src=\'./img/icon/win10.png\'/>我的微桌面')">
+                 onclick="Win10.openUrl('http://baidu.com','<img class=\'icon\' src=\'./img/icon/win10.png\'/>微桌面')">
                 <img class="icon" src="./img/icon/win10.png"/>
-                <div class="title">我的微桌面</div>
+                <div class="title">微桌面</div>
             </div>
              <div class="shortcut"
                  onclick="Win10.openUrl('http://baidu.com','<img class=\'icon\' src=\'./img/icon/baidu.png\'/>百度')">
@@ -57,14 +57,19 @@
                 <div class="title">百度</div>
             </div>
              <div class="shortcut"
-                 onclick="Win10.openUrl('http://baidu.com','<img class=\'icon\' src=\'./img/icon/demo.png\'/>壁纸')">
-                <img class="icon" src="./img/icon/demo.png"/>
-                <div class="title">壁纸</div>
+                 onclick="Win10.openUrl('http://baidu.com','<img class=\'icon\' src=\'./img/icon/weodimage.png\'/>壁纸')">
+                <img class="icon" src="./img/icon/weodimage.png"/>
+                <div class="title">微壁纸</div>
             </div>
             <div class="shortcut"
                  onclick="Win10.openUrl('http://w.qq.com/','<img class=\'icon\' src=\'./img/icon/qq.png\'/>QQ')">
                 <img class="icon" src="./img/icon/qq.png"/>
                 <div class="title">QQ</div>
+            </div>
+            <div class="shortcut"
+                 onclick="Win10.openUrl('http://baidu.com/','<img class=\'icon\' src=\'./img/icon/weodmusic.png\'/>微音乐')">
+                <img class="icon" src="./img/icon/weodmusic.png"/>
+                <div class="title">微音乐</div>
             </div>
         </div>
     </div>
