--- a/weod/WebContent/static/index.html
+++ b/weod/WebContent/static/index.html
@@ -23,6 +23,22 @@
              text-align: center;
              font-size: 16px;
          }
+         i.pngt{
+         	content: url(img/icon/re.png);
+         	display: block;
+         	float: left;
+         	height: 30px;
+         	width: 30px;
+         	margin: 5px 0px 0px 0px;
+         }
+         i.pnge{
+         	content: url(img/icon/exit.png);
+         	display: block;
+         	float: left;
+         	height: 30px;
+         	width: 30px;
+         	margin: 5px 0px 0px 0px;
+         }
     </style>
     <script>
         Win10.onReady(function () {
@@ -77,9 +93,10 @@
         <div class="list win10-menu-hidden animated animated-slideOutLeft">
             <div class="item"
                  onclick="Win10.exit()">
-                <i class="black icon fa fa-power-off fa-fw"></i>关闭
+                <i class="pnge"></i>退出
             </div>
-            <div class="item"><i class="black icon fa fa-power-off fa-fw"></i>一级菜单</div>
+            <div class="item"><i class="pngt"></i>个人信息</div>
+            <div class="item"><i class="pngt"></i>编辑资料</div>
             <div class="sub-item">二级菜单</div>
         </div>
         <div class="blocks">
