--- a/weod/WebContent/WEB-INF/jsp/login.html
+++ b/weod/WebContent/WEB-INF/jsp/login.html
@@ -101,11 +101,11 @@
             <img src="./img/avatar.jpg" class="content"/>
         </div>
         <p style="font-size: 24px;color: white;text-align: center">游客</p>
-        <form target="_self" method="get" action="#">
+        <form target="_self" method="get" action="">
             <!--用户名-->
-            <input type="text" placeholder="请输入登录名" class="login-username">
+            <input type="text" placeholder="请输入登录名" class="login-username" id="userid">
             <!--密码-->
-            <input type="password" placeholder="请输入密码" class="login-password">
+            <input type="password" placeholder="请输入密码" class="login-password" id="password">
             <!--登陆按钮-->
             <input type="submit"  value="登录" id="btn-login" class="login-submit"/>
         </form>
