--- a/weod/WebContent/static/showuser.html
+++ b/weod/WebContent/static/showuser.html
@@ -10,41 +10,34 @@
 	background-repeat:no-repeat;
 	background-size: 100% 100%;
 	width:100%;
-	height:650px;
-	}
-	.head{		
-	width: 20%;
-	float: left;
-	}
-	.floor{
-	width: 20%;
-	float: right;
-	}
-	.content{
-	width: 60%;	
-	}
-	
+	height:650px;}
+	div{border: 1px }
+			.head{height: 150px;}
+			.floor{height: 100px;}
+			.content{height: 400px;}			
 </style>
 </head>
 <body>
-	<div class="full" style="">
+	<div class="full">
+			<table  height="100%" width="100%" style="table-layout:fixed;">
+						<tr height="100%">
+							<td align="center"></td>
+							<td align="center" bgcolor="#F9F2F4" id="headpic">
+								<table>
+									<tr>
+										<td></td>
+									</tr>
+									<tr>
+										<td></td>
+									</tr>
+									<tr>
+										<td></td>
+									</tr>
+								</table>
+							<td align="center"></td>
+						</tr>
+					</table>
 
-		<div class="head" >
-		
-		 
-		</div>
-		<div class="content" align="center">
-		
-		</div>
-		<div class="floor">
-		
-		
-		</div>
-	
-	
-	
-	
-	
 	</div>
 </body>
 </html>
