--- a/weod/WebContent/static/index.html
+++ b/weod/WebContent/static/index.html
@@ -95,7 +95,7 @@
                  onclick="Win10.exit()">
                 <i class="pnge"></i>退出
             </div>
-            <div class="item" onclick="Win10.openUrl('./showuser.html','<img class=\'icon\' src=\'./img/icon/weodmusic.png\'/>微音乐')"><i class="pngt"></i>个人信息</div>
+            <div class="item" onclick="Win10.openUrl('./showuser.jsp','<img class=\'icon\' src=\'./img/icon/weodmusic.png\'/>个人信息')"><i class="pngt"></i>个人信息</div>
             <div class="item"><i class="pngt"></i>编辑资料</div>
             <div class="sub-item">二级菜单</div>
         </div>
