编辑个人资料页面，并实现功能

--- a/weod/WebContent/jsp/index.html
+++ b/weod/WebContent/jsp/index.html
@@ -39,6 +39,14 @@
          	width: 30px;
          	margin: 5px 0px 0px 0px;
          }
+         i.pngm{
+         	content: url(./img/icon/mess.png);
+         	display: block;
+         	float: left;
+         	height: 30px;
+         	width: 30px;
+         	margin: 5px 0px 0px 0px;
+         }
     </style>
     <script>
         Win10.onReady(function () {
@@ -95,9 +103,8 @@
                  onclick="Win10.exit()">
                 <i class="pnge"></i>退出
             </div>
-            <div class="item" onclick="Win10.openUrl('./showuser.jsp','<img class=\'icon\' src=\'./img/icon/weodmusic.png\'/>个人信息')"><i class="pngt"></i>个人信息</div>
-            <div class="item"><i class="pngt"></i>编辑资料</div>
-            <div class="sub-item">二级菜单</div>
+            <div class="item" onclick="Win10.openUrl('./showuser.jsp','<img class=\'icon\' src=\'./img/icon/asd.png\'/>个人信息')"><i class="pngm"></i>个人信息</div>
+            <div class="item" onclick="Win10.openUrl('./updateuser.jsp','<img class=\'icon\' src=\'./img/icon/update.png\'/>编辑资料')"><i class="pngt"></i>编辑资料</div>           
         </div>
         <div class="blocks">
             <div class="menu_group">
